# fileparser

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  hello.yml
src/fileparser/: __init__.py  __main__.py  parser.py
tests/: test_parser.py
